--- a/concepts/filter.html
+++ b/concepts/filter.html
@@ -1,51 +1,133 @@
-<div class="w-[1440px] h-72 pt-14 inline-flex flex-col justify-start items-start gap-2">
-    <div class="self-stretch px-24 pt-8 pb-2 inline-flex justify-center items-center gap-2.5">
-        <div class="flex-1 justify-start text-slate-600 text-3xl font-normal font-['Lab_Grotesque_Web'] leading-loose">Tapahtumamäärät</div>
-        <div class="w-8 h-8 bg-emerald-50 rounded outline outline-1 outline-offset-[-1px] outline-Notification-colours-Info-border flex justify-center items-center gap-2.5">
-            <div class="w-6 h-6 relative bg-emerald-50/0 rounded-[30px] overflow-hidden">
-                <div class="w-6 h-6 left-0 top-0 absolute"></div>
-                <div class="w-4 h-4 left-[4.04px] top-[4px] absolute bg-Primary-action"></div>
-                <div class="w-6 h-6 left-0 top-0 absolute"></div>
+<div class="w-[1440px] pt-16 pb-6 relative bg-emerald-50 border-t border-Separator inline-flex flex-col justify-center items-center gap-3">
+    <div class="w-[1440px] px-24 relative inline-flex justify-end items-center gap-2">
+        <div data-open="False" data-prefix-icon="false" data-show-label="true" data-state="Default" class="w-48 inline-flex flex-col justify-start items-start gap-1">
+            <div class="self-stretch justify-center text-slate-600 text-base font-normal font-['Lab_Grotesque_Web'] leading-none">Pikavalinnat</div>
+            <div class="self-stretch px-4 py-2 bg-white outline outline-1 outline-offset-[-1px] outline-slate-500 inline-flex justify-start items-center gap-2">
+                <div class="flex-1 flex justify-start items-center gap-2">
+                    <div class="justify-center text-slate-600 text-base font-normal font-['Lab_Grotesque_Web'] leading-normal">Heinäkuu 2023</div>
+                </div>
+                <div class="flex justify-end items-center gap-2">
+                    <div class="w-4 h-4 relative overflow-hidden">
+                        <div class="w-4 h-4 left-0 top-0 absolute opacity-90"></div>
+                        <div class="w-2 h-[4.94px] left-[4px] top-[5.73px] absolute bg-slate-600"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="self-stretch inline-flex justify-start items-center"></div>
+        </div>
+        <div data-prefix-icon="false" data-show-unit="false" data-state="Default" data-suffix-icon="true" class="w-36 inline-flex flex-col justify-start items-start gap-1">
+            <div class="self-stretch justify-center text-slate-600 text-base font-normal font-['Lab_Grotesque_Web'] leading-none">Alkaa </div>
+            <div class="self-stretch px-4 py-2 bg-white outline outline-1 outline-offset-[-1px] outline-slate-500 inline-flex justify-start items-center gap-2">
+                <div class="flex-1 flex justify-start items-center gap-2">
+                    <div class="justify-center text-slate-600 text-base font-normal font-['Lab_Grotesque_Web'] leading-normal">01.07.2023</div>
+                </div>
+                <div class="flex justify-end items-center gap-2">
+                    <div class="w-4 h-4 relative overflow-hidden">
+                        <div class="w-4 h-4 left-0 top-0 absolute"></div>
+                        <div class="w-3.5 h-3.5 left-[1.33px] top-[0.67px] absolute bg-slate-600"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="self-stretch inline-flex justify-start items-center"></div>
+        </div>
+        <div class="justify-center text-slate-600 text-2xl font-normal font-['Lab_Grotesque_Web'] leading-normal">-</div>
+        <div data-prefix-icon="false" data-show-unit="false" data-state="Default" data-suffix-icon="true" class="w-36 inline-flex flex-col justify-start items-start gap-1">
+            <div class="self-stretch justify-center text-slate-600 text-base font-normal font-['Lab_Grotesque_Web'] leading-none">Päättyy</div>
+            <div class="self-stretch px-4 py-2 bg-white outline outline-1 outline-offset-[-1px] outline-slate-500 inline-flex justify-start items-center gap-2">
+                <div class="flex-1 flex justify-start items-center gap-2">
+                    <div class="justify-center text-slate-600 text-base font-normal font-['Lab_Grotesque_Web'] leading-normal">31.07.2023</div>
+                </div>
+                <div class="flex justify-end items-center gap-2">
+                    <div class="w-4 h-4 relative overflow-hidden">
+                        <div class="w-4 h-4 left-0 top-0 absolute"></div>
+                        <div class="w-3.5 h-3.5 left-[1.33px] top-[0.67px] absolute bg-slate-600"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="self-stretch inline-flex justify-start items-center"></div>
+        </div>
+        <div class="w-[510px] h-10 left-[66px] top-[20px] absolute flex justify-start items-start">
+            <div data-prefix-icon="true" data-selected="Yes" data-state="normal" data-suffix-icon="false" class="flex-1 h-10 px-4 py-2 bg-Secondary-action flex justify-center items-center gap-2">
+                <div data-style="Outlined" class="w-4 h-4 relative overflow-hidden">
+                    <div class="w-3.5 h-2.5 left-[2.40px] top-[3.97px] absolute bg-Text-invert"></div>
+                </div>
+                <div class="text-center justify-center text-Text-invert text-sm font-medium font-['Lab_Grotesque_Web'] leading-none">Kanavittain</div>
+            </div>
+            <div data-prefix-icon="false" data-selected="No" data-state="Normal" data-suffix-icon="false" class="flex-1 h-10 px-4 py-2 bg-Background-lvl-1 outline outline-1 outline-offset-[-1px] outline-Secondary-action flex justify-center items-center gap-2">
+                <div class="text-center justify-center text-Text text-sm font-medium font-['Lab_Grotesque_Web'] leading-none">Prosessittain</div>
+            </div>
+            <div data-prefix-icon="false" data-selected="No" data-state="Normal" data-suffix-icon="false" class="flex-1 h-10 px-4 py-2 bg-Background-lvl-1 outline outline-1 outline-offset-[-1px] outline-Secondary-action flex justify-center items-center gap-2">
+                <div class="text-center justify-center text-Text text-sm font-medium font-['Lab_Grotesque_Web'] leading-none">Rooleittain</div>
+            </div>
+        </div>
+        <div class="w-[510px] h-10 left-[66px] top-[20px] absolute flex justify-start items-start">
+            <div data-prefix-icon="true" data-selected="Yes" data-state="normal" data-suffix-icon="false" class="flex-1 h-10 px-4 py-2 bg-Secondary-action flex justify-center items-center gap-2">
+                <div data-style="Outlined" class="w-4 h-4 relative overflow-hidden">
+                    <div class="w-3.5 h-2.5 left-[2.40px] top-[3.97px] absolute bg-Text-invert"></div>
+                </div>
+                <div class="text-center justify-center text-Text-invert text-sm font-medium font-['Lab_Grotesque_Web'] leading-none">Näytä kaikki</div>
+            </div>
+            <div data-prefix-icon="false" data-selected="No" data-state="Normal" data-suffix-icon="false" class="flex-1 h-10 px-4 py-2 bg-Background-lvl-1 outline outline-1 outline-offset-[-1px] outline-Secondary-action flex justify-center items-center gap-2">
+                <div class="text-center justify-center text-Text text-sm font-medium font-['Lab_Grotesque_Web'] leading-none">Kanavat</div>
+            </div>
+            <div data-prefix-icon="false" data-selected="No" data-state="Normal" data-suffix-icon="false" class="flex-1 h-10 px-4 py-2 bg-Background-lvl-1 outline outline-1 outline-offset-[-1px] outline-Secondary-action flex justify-center items-center gap-2">
+                <div class="text-center justify-center text-Text text-sm font-medium font-['Lab_Grotesque_Web'] leading-none">Tapahtumatyypit</div>
+            </div>
+            <div data-prefix-icon="false" data-selected="No" data-state="Normal" data-suffix-icon="false" class="flex-1 h-10 px-4 py-2 bg-Background-lvl-1 outline outline-1 outline-offset-[-1px] outline-Secondary-action flex justify-center items-center gap-2">
+                <div class="text-center justify-center text-Text text-sm font-medium font-['Lab_Grotesque_Web'] leading-none">Roolit</div>
             </div>
         </div>
     </div>
-    <div class="self-stretch px-24 pb-2 flex flex-col justify-start items-start gap-0.5">
-        <div class="self-stretch justify-start text-slate-500 text-base font-medium font-['Lab_Grotesque_Web'] leading-normal">01.07.2023-31.07.2025</div>
-    </div>
-    <div class="self-stretch px-24 pb-2 flex flex-col justify-start items-start gap-2.5">
-        <div class="self-stretch h-28 px-6 pt-4 pb-2 relative bg-emerald-50 inline-flex justify-center items-center gap-8">
-            <div class="w-[510px] h-10 left-[24px] top-[38px] absolute flex justify-start items-start">
-                <div data-prefix-icon="true" data-selected="Yes" data-state="normal" data-suffix-icon="false" class="flex-1 h-10 px-4 py-2 bg-Secondary-action flex justify-center items-center gap-2">
-                    <div data-style="Outlined" class="w-4 h-4 relative overflow-hidden">
-                        <div class="w-3.5 h-2.5 left-[2.40px] top-[3.97px] absolute bg-Text-invert"></div>
-                    </div>
-                    <div class="text-center justify-center text-Text-invert text-sm font-medium font-['Lab_Grotesque_Web'] leading-none">Kanavittain</div>
+    <div class="w-36 left-[66px] top-[56px] absolute justify-center text-Text text-base font-normal font-['Lab_Grotesque_Web'] leading-none">Ryhmittele</div>
+    <div class="w-36 left-[66px] top-[20px] absolute justify-center text-Text text-base font-medium font-['Lab_Grotesque_Web'] leading-normal">Suodattimet</div>
+    <div class="w-[1308px] inline-flex justify-center items-center gap-8">
+        <div data-open="False" data-prefix-icon="false" data-show-label="true" data-state="Default" class="flex-1 inline-flex flex-col justify-start items-start gap-1">
+            <div class="self-stretch justify-center text-Text text-base font-normal font-['Lab_Grotesque_Web'] leading-none">Pääprosessi</div>
+            <div class="self-stretch px-4 py-2 bg-Background-lvl-1 outline outline-1 outline-offset-[-1px] outline-Secondary-action inline-flex justify-start items-center gap-2">
+                <div class="flex-1 flex justify-start items-center gap-2">
+                    <div class="justify-center text-Text text-base font-normal font-['Lab_Grotesque_Web'] leading-normal">Kaikki</div>
                 </div>
-                <div data-prefix-icon="false" data-selected="No" data-state="Normal" data-suffix-icon="false" class="flex-1 h-10 px-4 py-2 bg-Background-lvl-1 outline outline-1 outline-offset-[-1px] outline-Secondary-action flex justify-center items-center gap-2">
-                    <div class="text-center justify-center text-Text text-sm font-medium font-['Lab_Grotesque_Web'] leading-none">Prosessittain</div>
-                </div>
-                <div data-prefix-icon="false" data-selected="No" data-state="Normal" data-suffix-icon="false" class="flex-1 h-10 px-4 py-2 bg-Background-lvl-1 outline outline-1 outline-offset-[-1px] outline-Secondary-action flex justify-center items-center gap-2">
-                    <div class="text-center justify-center text-Text text-sm font-medium font-['Lab_Grotesque_Web'] leading-none">Rooleittain</div>
-                </div>
-            </div>
-            <div data-prefix-icon="false" data-state="Disabled" data-suffix-icon="false" data-type="Secondary" class="px-6 py-3 left-[1019px] top-[30px] absolute outline outline-2 outline-offset-[-2px] outline-Disabled flex justify-center items-center gap-2">
-                <div class="text-center justify-center text-Disabled text-base font-medium font-['Lab_Grotesque_Web'] leading-normal">Tyhjennä suodattimet</div>
-            </div>
-            <div data-open="False" data-prefix-icon="false" data-show-label="true" data-state="Default" class="w-96 left-[555px] top-[19px] absolute inline-flex flex-col justify-start items-start gap-1">
-                <div class="self-stretch justify-center text-Text text-base font-normal font-['Lab_Grotesque_Web'] leading-none">Rooli</div>
-                <div class="self-stretch px-4 py-2 bg-Background-lvl-1 outline outline-1 outline-offset-[-1px] outline-Secondary-action inline-flex justify-start items-center gap-2">
-                    <div class="flex-1 flex justify-start items-center gap-2">
-                        <div class="justify-center text-Text text-base font-normal font-['Lab_Grotesque_Web'] leading-normal">Kaikki</div>
-                    </div>
-                    <div class="flex justify-end items-center gap-2">
-                        <div class="w-4 h-4 relative overflow-hidden">
-                            <div class="w-4 h-4 left-0 top-0 absolute opacity-90"></div>
-                            <div class="w-2 h-[4.94px] left-[4px] top-[5.73px] absolute bg-Text"></div>
-                        </div>
+                <div class="flex justify-end items-center gap-2">
+                    <div class="w-4 h-4 relative overflow-hidden">
+                        <div class="w-4 h-4 left-0 top-0 absolute opacity-90"></div>
+                        <div class="w-2 h-[4.94px] left-[4px] top-[5.73px] absolute bg-Text"></div>
                     </div>
                 </div>
-                <div class="self-stretch inline-flex justify-start items-center"></div>
             </div>
+            <div class="self-stretch inline-flex justify-start items-center"></div>
+        </div>
+        <div data-open="False" data-prefix-icon="false" data-show-label="true" data-state="Default" class="flex-1 inline-flex flex-col justify-start items-start gap-1">
+            <div class="self-stretch justify-center text-Text text-base font-normal font-['Lab_Grotesque_Web'] leading-none">Kanava</div>
+            <div class="self-stretch px-4 py-2 bg-Background-lvl-1 outline outline-1 outline-offset-[-1px] outline-Secondary-action inline-flex justify-start items-center gap-2">
+                <div class="flex-1 flex justify-start items-center gap-2">
+                    <div class="justify-center text-Text text-base font-normal font-['Lab_Grotesque_Web'] leading-normal">Kaikki</div>
+                </div>
+                <div class="flex justify-end items-center gap-2">
+                    <div class="w-4 h-4 relative overflow-hidden">
+                        <div class="w-4 h-4 left-0 top-0 absolute opacity-90"></div>
+                        <div class="w-2 h-[4.94px] left-[4px] top-[5.73px] absolute bg-Text"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="self-stretch inline-flex justify-start items-center"></div>
+        </div>
+        <div data-open="False" data-prefix-icon="false" data-show-label="true" data-state="Default" class="flex-1 inline-flex flex-col justify-start items-start gap-1">
+            <div class="self-stretch justify-center text-Text text-base font-normal font-['Lab_Grotesque_Web'] leading-none">Markkinarooli</div>
+            <div class="self-stretch px-4 py-2 bg-Background-lvl-1 outline outline-1 outline-offset-[-1px] outline-Secondary-action inline-flex justify-start items-center gap-2">
+                <div class="flex-1 flex justify-start items-center gap-2">
+                    <div class="justify-center text-Text text-base font-normal font-['Lab_Grotesque_Web'] leading-normal">Kaikki</div>
+                </div>
+                <div class="flex justify-end items-center gap-2">
+                    <div class="w-4 h-4 relative overflow-hidden">
+                        <div class="w-4 h-4 left-0 top-0 absolute opacity-90"></div>
+                        <div class="w-2 h-[4.94px] left-[4px] top-[5.73px] absolute bg-Text"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="self-stretch inline-flex justify-start items-center"></div>
+        </div>
+        <div data-prefix-icon="false" data-state="Disabled" data-suffix-icon="false" data-type="Secondary" class="px-6 py-3 outline outline-2 outline-offset-[-2px] outline-Disabled flex justify-center items-center gap-2">
+            <div class="text-center justify-center text-Disabled text-base font-medium font-['Lab_Grotesque_Web'] leading-normal">Tyhjennä suodattimet</div>
         </div>
     </div>
 </div>
